Start_Stop count and Comment can be added

--- a/Krakow_experiments.ipynb
+++ b/Krakow_experiments.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,18 +36,22 @@
     "    def Average_velocity(self):\n",
     "        return(self.Q/self.Inlet_area());\n",
     "    \n",
-    "    def time_stamp(self):\n",
+    "    def time_stamp(self, count, comment = ' '):\n",
     "        with open(self.name+'.txt','a') as f:\n",
     "            tmp = datetime.now()\n",
-    "            print('Writing time to file: ' + str(tmp))\n",
-    "            f.write(self.name + ' :' + str(tmp)+ '\\n')\n",
+    "            if count%2 != 0:\n",
+    "                print('Writing time to file: ' + str(tmp) + ' :started ' + comment)\n",
+    "                f.write(self.name + ' :' + str(tmp)+ ' :started ' + comment  + '\\n')\n",
+    "            elif count % 2 == 0:\n",
+    "                print('Writing time to file: ' + str(tmp) + ' :stopped ' + comment)\n",
+    "                f.write(self.name + ' :' + str(tmp)+ ' :stopped ' + comment  + '\\n')                \n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -78,27 +82,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count = 1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing time to file: 2020-03-04 14:28:08.442177\n"
+      "Writing time to file: 2020-07-29 12:43:37.334412 :stopped  \n"
      ]
     }
    ],
    "source": [
-    "E1.time_stamp()"
+    "E1.time_stamp(count)\n",
+    "count += 1;"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -124,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
