--- a/Krakow_experiments.ipynb
+++ b/Krakow_experiments.ipynb
@@ -103,7 +103,7 @@
     }
    ],
    "source": [
-    "E1.time_stamp(count)\n",
+    "E1.time_stamp(count, comment = ' ')\n",
     "count += 1;"
    ]
   },
