Choose suitable threshold
check volume vs threshold and decide the range for further extraction of wormholes.

--- a/Max_Paper/Tip_velocity_PZ103_BACKUP.ipynb
+++ b/Max_Paper/Tip_velocity_PZ103_BACKUP.ipynb
@@ -783,8 +783,20 @@
      "output_type": "execute_result"
     }
    ],
+{
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "Vol_fill"
+    "import csv\n",
+    "\n",
+    "mydict = sample.info\n",
+    "\n",
+    "with open('dict.csv', 'a') as csv_file:  \n",
+    "    writer = csv.writer(csv_file)\n",
+    "    #writer.writerow([k for k in mydict.keys()])\n",
+    "    writer.writerow([v for v in mydict.values()])"
    ]
   },
   {
