--- a/Max_Paper/Tip_velocity_PZ103_BACKUP.ipynb
+++ b/Max_Paper/Tip_velocity_PZ103_BACKUP.ipynb
@@ -140,7 +140,7 @@
    "source": [
     "### To use mavayi give point manually\n",
     "x = 130; y = 75;\n",
-    "point = [z, y, x]"
+    "point = [z, x, y]"
    ]
   },
   {
